{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 251,
  "lineage": "cb31b072-6fba-c78b-d1b0-a88001a07ac2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0232d2189a5975ef8",
            "association_id": "eipassoc-01134e79f07c1cf7d",
            "domain": "vpc",
            "id": "eipalloc-0232d2189a5975ef8",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0f8b9dd3536772a45",
            "private_dns": "ip-10-0-0-193.eu-west-2.compute.internal",
            "private_ip": "10.0.0.193",
            "public_dns": "ec2-18-135-31-29.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.31.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-nat-gateway-eip-1"
            },
            "tags_all": {
              "Name": "tf-nat-gateway-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:internet-gateway/igw-00bd42461224555ad",
            "id": "igw-00bd42461224555ad",
            "owner_id": "992382559666",
            "tags": {
              "Name": "tf-internet-gateway"
            },
            "tags_all": {
              "Name": "tf-internet-gateway"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0232d2189a5975ef8",
            "association_id": "eipassoc-01134e79f07c1cf7d",
            "connectivity_type": "public",
            "id": "nat-04aeb9d9f2949ce62",
            "network_interface_id": "eni-0f8b9dd3536772a45",
            "private_ip": "10.0.0.193",
            "public_ip": "18.135.31.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d06438c6beb782a",
            "tags": {
              "Name": "tf-nat-gateway-1"
            },
            "tags_all": {
              "Name": "tf-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:route-table/rtb-07cf772c81d7d7a9c",
            "id": "rtb-07cf772c81d7d7a9c",
            "owner_id": "992382559666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04aeb9d9f2949ce62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-route-table-1"
            },
            "tags_all": {
              "Name": "tf-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_nat_gateway.terraform_nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:route-table/rtb-0419aa07aa1c183c4",
            "id": "rtb-0419aa07aa1c183c4",
            "owner_id": "992382559666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04aeb9d9f2949ce62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-route-table-2"
            },
            "tags_all": {
              "Name": "tf-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_nat_gateway.terraform_nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:route-table/rtb-00b708d177df4a1bb",
            "id": "rtb-00b708d177df4a1bb",
            "owner_id": "992382559666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04aeb9d9f2949ce62",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-route-table-3"
            },
            "tags_all": {
              "Name": "tf-private-route-table-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_nat_gateway.terraform_nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:route-table/rtb-0d6cc40c3063fa1f1",
            "id": "rtb-0d6cc40c3063fa1f1",
            "owner_id": "992382559666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00bd42461224555ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-public-route-table"
            },
            "tags_all": {
              "Name": "tf-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0946b1d08ad29ed00",
            "route_table_id": "rtb-07cf772c81d7d7a9c",
            "subnet_id": "subnet-0b1f97e2b77db74d3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_nat_gateway.terraform_nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9b12162d61c5ee7",
            "route_table_id": "rtb-0419aa07aa1c183c4",
            "subnet_id": "subnet-0c67ae347c6f2f405"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_nat_gateway.terraform_nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00895019321e5eaa3",
            "route_table_id": "rtb-00b708d177df4a1bb",
            "subnet_id": "subnet-0c34e0ce802f8089e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway_eip",
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_nat_gateway.terraform_nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4b8a6a81906ee94",
            "route_table_id": "rtb-0d6cc40c3063fa1f1",
            "subnet_id": "subnet-03d06438c6beb782a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c534b68408f8c59",
            "route_table_id": "rtb-0d6cc40c3063fa1f1",
            "subnet_id": "subnet-0fcf209fbe150440d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0155692145d44c147",
            "route_table_id": "rtb-0d6cc40c3063fa1f1",
            "subnet_id": "subnet-0b3f43c70cd33a3ad"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.terraform-internet-gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:subnet/subnet-0b1f97e2b77db74d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1f97e2b77db74d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382559666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets-1"
            },
            "tags_all": {
              "Name": "private_subnets-1"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:subnet/subnet-0c67ae347c6f2f405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c67ae347c6f2f405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382559666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets-2"
            },
            "tags_all": {
              "Name": "private_subnets-2"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:subnet/subnet-0c34e0ce802f8089e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c34e0ce802f8089e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382559666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnets-3"
            },
            "tags_all": {
              "Name": "private_subnets-3"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:subnet/subnet-03d06438c6beb782a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d06438c6beb782a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382559666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets-1"
            },
            "tags_all": {
              "Name": "public_subnets-1"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:subnet/subnet-0fcf209fbe150440d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcf209fbe150440d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382559666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets-2"
            },
            "tags_all": {
              "Name": "public_subnets-2"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:subnet/subnet-0b3f43c70cd33a3ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3f43c70cd33a3ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382559666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnets-3"
            },
            "tags_all": {
              "Name": "public_subnets-3"
            },
            "vpc_id": "vpc-090a8390421747a5f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:992382559666:vpc/vpc-090a8390421747a5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0122c289a302b5fbb",
            "default_route_table_id": "rtb-0b7f05f764aeed885",
            "default_security_group_id": "sg-0a9d7ddd0c8724cb7",
            "dhcp_options_id": "dopt-04038bc5f09aae116",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090a8390421747a5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b7f05f764aeed885",
            "owner_id": "992382559666",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}